@@ -148,7 +148,9 @@ implements IDownloadMonitorListener, ISelectableControl {
 		else if (state == DLState.PAUSED) { lblState="Paused"; }
 		else if (state == DLState.CANCELLED) { lblState="Cancelled"; lblProgress="";}
 		else if (state == DLState.FINISHED) { lblState="Finished"; lblProgress="";}
-		else if (state == DLState.FAILED) { lblState="Failed"; lblProgress="";}
+		else if (state == DLState.FAILED) { lblState="Failed";
+			lblProgress="("+monitor.getFailureCount()+")";
+		}
 		if (pThread != null)
 			pThread.interrupt();
 		displayLabel();
@@ -157,7 +159,7 @@ implements IDownloadMonitorListener, ISelectableControl {
 	private void displayLabel() {
 		final StringBuffer text = new StringBuffer();
 		text.append(lblState);
-		if (lblProgress != null)
+		if (lblProgress != null && !lblProgress.equals(""))
 			text.append(" "+lblProgress);
 		if (!isDisposed()) {
 			SWTView.asyncExec(new Runnable() {
