@@ -1,5 +1,7 @@
 V0.15-svn (development)
 * New downloads aren't added to the list if they're already on it.
+* If a download fails 5 times, it won't be automatically started again (code 
+  currently untested)
 V0.15 2006-01-04
 * The display for the title and download status no longer gets ugly when the 
   title is long. Now the download status will always be displayed, and the title 
